2002-01-18  Bruno Haible  <bruno@clisp.org>

	* ca.po: New file, from Ivan Vilata i Balaguer <ivan@selidor.net>.
	* LINGUAS: Add ca.

2002-01-16  Bruno Haible  <bruno@clisp.org>

	* Makevars (EXTRA_LOCALE_CATEGORIES): New variable.
	* Makefile.in.in (install-data-yes): For each EXTRA_LOCALE_CATEGORIES,
	install a symlink to the catalog in the LC_MESSAGES subdirectory.
	(installdirs-data-yes): Keep consistent with install-data-yes.
	(uninstall-data-yes): Adjust for EXTRA_LOCALE_CATEGORIES.
	(installdirs-data): Fix dependency.

2002-01-15  Bruno Haible  <bruno@clisp.org>

	* de.po: Update from Karl Eichwalder <ke@suse.de>.

2002-01-14  Bruno Haible  <bruno@clisp.org>

	* fr.po: Update from Michel Robitaille <robitail@iro.umontreal.ca>.
	* ko.po: Update from Changwoo Ryu <cwryu@debian.org>.
	* sk.po: Update from Marcel Telka <marcel@telka.sk>.
	* sl.po: Update from
	Primož Peterlin <primoz.peterlin@biofiz.mf.uni-lj.si>.
	* sv.po: Update from Jan Djärv <Jan.Djarv@mbox200.swipnet.se>.
	* tr.po: Update from Nilgün Belma Bugüner <nilgun@fide.org>.

2002-01-11  Bruno Haible  <bruno@clisp.org>

	* de.po: Update from Karl Eichwalder <ke@suse.de>.

2002-01-08  Bruno Haible  <bruno@clisp.org>

	* POTFILES.in: Add src/format-elisp.c, src/x-elisp.c.

2002-01-05  Bruno Haible  <bruno@clisp.org>

	* Rules-quot (.insert-header.po-update-en): Set GETTEXTLIBDIR to an
	absolute path, not a relative path.

2002-01-05  Bruno Haible  <bruno@clisp.org>

	* Makefile.in.in ($(DOMAIN).pot-update): Renamed from target
	$(srcdir)/$(DOMAIN).pot.
	($(srcdir)/$(DOMAIN).pot): New rule, which normally does nothing.
	($(POFILES)): Depend on $(srcdir)/$(DOMAIN).pot, not on 'force'.
	(update-po): Update.

2002-01-07  Bruno Haible  <bruno@clisp.org>

	* fr.po: Update from Michel Robitaille <robitail@iro.umontreal.ca>.

2002-01-04  Bruno Haible  <bruno@clisp.org>

	* Makevars: Update COPYRIGHT_HOLDER explanation.

2002-01-03  Bruno Haible  <bruno@clisp.org>

	* sl.po: Update from